# camunda-client

./: .gitignore  .pylintrc  Changelog.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: python-package.yml
bpmn_process/: hello_world.bpmn  odd_number.bpmn
camunda/client/: engine_client.py  external_task_client.py
camunda/external_task/: __init__.py  external_task.py  external_task_executor.py  external_task_result.py  external_task_worker.py
camunda/utils/: utils.py
camunda/variables/: variables.py
examples/: fetch_and_execute.py  hello_world.py  manage_tasks.py  odd_number.py  task_handler_example.py  tasks_example.py
tests/: test_external_task.py  test_external_task_client.py
