[tool.poetry]
name = "avikom-camunda-client"
version = "0.10.1"
description = "A python client for Camunda to process external service tasks."
authors = ["Alexander Neumann <aleneum@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["camunda", "client", "service task", "external task", "async"]
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Topic :: Software Development :: Libraries',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
packages = [
    { include = "camunda" },
]

[[tool.poetry.source]]
name = "test-pypi2"
url = "https://gitlab.mati.io/api/v4/projects/623/packages/pypi/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.7.2,<3.11"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
poetry = "^1.5.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.15.1"
pytest-mock = "^3.6.1"
black = "^23.1.0"
pylint = "^2.11.1"
mypy = "^0.910"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
